--- a/README
+++ b/README
@@ -12,44 +12,43 @@ methods are also specified in XML providing the ability to modify
 existing access methods and create new ones.
 
 Runtime requirements:
-  cygwin-1.5.24-2
-  GConf2-2.20.1-1
-  ORBit2-2.14.10-1
-  at-spi-1.20.1-1
-  atk-1.20.0-1
-  gdk-pixbuf2-2.12.2-1
-  glib2-2.14.4-1
-  gnome-speech-0.4.16-1
-  gtk2-x11-2.12.2-1
+  cygwin-1.5.25-15
+  at-spi-1.22.1-1
+  atk-1.22.0-1
+  GConf2-2.22.0-1
+  gdk-pixbuf2-2.12.11-1
+  glib2-2.16.4-1
+  gnome-speech-0.4.20-1
+  gtk2-x11-2.12.11-1
+  libbonobo2-2.22.0-1
+  libesound0-0.2.38-1
+  libglade2-2.6.2-1
+  libgnome2-2.22.0-1
+  libgnomeui2-2.22.1-1
+  libintl8-0.15-1
+  libwnck1_22-2.22.3-1
   libX11_6-1.1.3-1
   libXevie1-1.0.2-1
   libXi6-1.1.3-1
-  libbonobo2-2.20.1-1
-  libesound0-0.2.38-1
-  libglade2-2.6.2-1
-  libgnome2-2.20.1.1-1
-  libgnomeui2-2.20.1.1-1
-  libintl8-0.15-1
-  libwnck1_22-2.20.2-1
-  libxml2-2.6.30-1
-  pango-1.18.3-1
+  libxml2-2.6.32-1
+  ORBit2-2.14.13-1
+  pango-1.20.5-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.24-2
   autoconf2.5-2.61-1
-  automake1.9-1.9.6-2
-  binutils-20060817-1
-  cygport-0.3.7-1
-  gawk-3.1.5-4
+  automake1.10-1.10.1-1
+  binutils-20080523-2
+  cygport-0.3.12-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
-  gnome-common-2.20.0-1
-  gtk-doc-1.9-1
-  intltool-0.36.2-1
-  libtool1.5-1.5.23a-2
+  gnome-common-2.20.0-2
+  gtk-doc-1.10-1
+  intltool-0.40.0-1
+  libtool-2.2.2-2
   make-3.81-1
-  pkg-config-0.21-1
-  rarian-0.6.0-1
+  pkg-config-0.23a-2
+  rarian-0.8.0-1
   sed-4.1.5-2
 
 Canonical website:
@@ -61,15 +60,15 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gok-1.3.7-X-src.tar.bz2
+  unpack gok-1.4.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gok-1.3.7-X.cygport all
+  cygport ./gok-1.4.0-X.cygport all
 
 This will create:
-  /usr/src/gok-1.3.7-X-src.tar.bz2
-  /usr/src/gok-1.3.7-X.tar.bz2
+  /usr/src/gok-1.4.0-X-src.tar.bz2
+  /usr/src/gok-1.4.0-X.tar.bz2
 
 -------------------------------------------
 
@@ -83,14 +82,24 @@ Files included in the binary package:
   /usr/lib/bonobo/servers/GNOME_Gok.server
   /usr/lib/pkgconfig/gok-1.0.pc
   /usr/share/applications/gok.desktop
-  /usr/share/doc/gok-1.3.7/AUTHORS
-  /usr/share/doc/gok-1.3.7/COPYING
-  /usr/share/doc/gok-1.3.7/ChangeLog
-  /usr/share/doc/gok-1.3.7/INSTALL
-  /usr/share/doc/gok-1.3.7/NEWS
-  /usr/share/doc/gok-1.3.7/README
+  /usr/share/doc/gok-1.4.0/AUTHORS
+  /usr/share/doc/gok-1.4.0/COPYING
+  /usr/share/doc/gok-1.4.0/ChangeLog
+  /usr/share/doc/gok-1.4.0/INSTALL
+  /usr/share/doc/gok-1.4.0/NEWS
+  /usr/share/doc/gok-1.4.0/README
   /usr/share/gnome/help/gok/C/gok.xml
   /usr/share/gnome/help/gok/C/legal.xml
+  /usr/share/gok/C/gok-controls.kbd
+  /usr/share/gok/C/hide.kbd
+  /usr/share/gok/C/launcher.kbd
+  /usr/share/gok/C/main.kbd
+  /usr/share/gok/C/mouse.kbd
+  /usr/share/gok/C/move-resize.kbd
+  /usr/share/gok/C/numberpad.kbd
+  /usr/share/gok/C/quit.kbd
+  /usr/share/gok/C/text-operations.kbd
+  /usr/share/gok/C/valuator.kbd
   /usr/share/gok/East.png
   /usr/share/gok/Keyboard.kbd
   /usr/share/gok/NE.png
@@ -130,6 +139,16 @@ Files included in the binary package:
   /usr/share/gok/ar/quit.kbd
   /usr/share/gok/ar/text-operations.kbd
   /usr/share/gok/ar/valuator.kbd
+  /usr/share/gok/as/gok-controls.kbd
+  /usr/share/gok/as/hide.kbd
+  /usr/share/gok/as/launcher.kbd
+  /usr/share/gok/as/main.kbd
+  /usr/share/gok/as/mouse.kbd
+  /usr/share/gok/as/move-resize.kbd
+  /usr/share/gok/as/numberpad.kbd
+  /usr/share/gok/as/quit.kbd
+  /usr/share/gok/as/text-operations.kbd
+  /usr/share/gok/as/valuator.kbd
   /usr/share/gok/automatic-scanning.xam
   /usr/share/gok/az/gok-controls.kbd
   /usr/share/gok/az/hide.kbd
@@ -357,7 +376,6 @@ Files included in the binary package:
   /usr/share/gok/gl/text-operations.kbd
   /usr/share/gok/gl/valuator.kbd
   /usr/share/gok/glade/gok.glade2
-  /usr/share/gok/gok-controls.kbd
   /usr/share/gok/gok.rc
   /usr/share/gok/goklogo.png
   /usr/share/gok/goksound1.wav
@@ -372,6 +390,16 @@ Files included in the binary package:
   /usr/share/gok/gu/quit.kbd
   /usr/share/gok/gu/text-operations.kbd
   /usr/share/gok/gu/valuator.kbd
+  /usr/share/gok/he/gok-controls.kbd
+  /usr/share/gok/he/hide.kbd
+  /usr/share/gok/he/launcher.kbd
+  /usr/share/gok/he/main.kbd
+  /usr/share/gok/he/mouse.kbd
+  /usr/share/gok/he/move-resize.kbd
+  /usr/share/gok/he/numberpad.kbd
+  /usr/share/gok/he/quit.kbd
+  /usr/share/gok/he/text-operations.kbd
+  /usr/share/gok/he/valuator.kbd
   /usr/share/gok/hi/gok-controls.kbd
   /usr/share/gok/hi/hide.kbd
   /usr/share/gok/hi/launcher.kbd
@@ -382,7 +410,6 @@ Files included in the binary package:
   /usr/share/gok/hi/quit.kbd
   /usr/share/gok/hi/text-operations.kbd
   /usr/share/gok/hi/valuator.kbd
-  /usr/share/gok/hide.kbd
   /usr/share/gok/hr/gok-controls.kbd
   /usr/share/gok/hr/hide.kbd
   /usr/share/gok/hr/launcher.kbd
@@ -465,7 +492,6 @@ Files included in the binary package:
   /usr/share/gok/ku/text-operations.kbd
   /usr/share/gok/ku/valuator.kbd
   /usr/share/gok/latched.png
-  /usr/share/gok/launcher.kbd
   /usr/share/gok/locked.png
   /usr/share/gok/lt/gok-controls.kbd
   /usr/share/gok/lt/hide.kbd
@@ -487,7 +513,6 @@ Files included in the binary package:
   /usr/share/gok/lv/quit.kbd
   /usr/share/gok/lv/text-operations.kbd
   /usr/share/gok/lv/valuator.kbd
-  /usr/share/gok/main.kbd
   /usr/share/gok/manage.kbd
   /usr/share/gok/mk/gok-controls.kbd
   /usr/share/gok/mk/hide.kbd
@@ -519,8 +544,6 @@ Files included in the binary package:
   /usr/share/gok/mn/quit.kbd
   /usr/share/gok/mn/text-operations.kbd
   /usr/share/gok/mn/valuator.kbd
-  /usr/share/gok/mouse.kbd
-  /usr/share/gok/move-resize.kbd
   /usr/share/gok/mr/gok-controls.kbd
   /usr/share/gok/mr/hide.kbd
   /usr/share/gok/mr/launcher.kbd
@@ -571,7 +594,16 @@ Files included in the binary package:
   /usr/share/gok/nl/quit.kbd
   /usr/share/gok/nl/text-operations.kbd
   /usr/share/gok/nl/valuator.kbd
-  /usr/share/gok/numberpad.kbd
+  /usr/share/gok/nn/gok-controls.kbd
+  /usr/share/gok/nn/hide.kbd
+  /usr/share/gok/nn/launcher.kbd
+  /usr/share/gok/nn/main.kbd
+  /usr/share/gok/nn/mouse.kbd
+  /usr/share/gok/nn/move-resize.kbd
+  /usr/share/gok/nn/numberpad.kbd
+  /usr/share/gok/nn/quit.kbd
+  /usr/share/gok/nn/text-operations.kbd
+  /usr/share/gok/nn/valuator.kbd
   /usr/share/gok/oc/gok-controls.kbd
   /usr/share/gok/oc/hide.kbd
   /usr/share/gok/oc/launcher.kbd
@@ -632,7 +664,6 @@ Files included in the binary package:
   /usr/share/gok/pt_BR/quit.kbd
   /usr/share/gok/pt_BR/text-operations.kbd
   /usr/share/gok/pt_BR/valuator.kbd
-  /usr/share/gok/quit.kbd
   /usr/share/gok/qwerty.kbd
   /usr/share/gok/ro/gok-controls.kbd
   /usr/share/gok/ro/hide.kbd
@@ -757,7 +788,6 @@ Files included in the binary package:
   /usr/share/gok/te/quit.kbd
   /usr/share/gok/te/text-operations.kbd
   /usr/share/gok/te/valuator.kbd
-  /usr/share/gok/text-operations.kbd
   /usr/share/gok/th/gok-controls.kbd
   /usr/share/gok/th/hide.kbd
   /usr/share/gok/th/launcher.kbd
@@ -788,7 +818,6 @@ Files included in the binary package:
   /usr/share/gok/uk/quit.kbd
   /usr/share/gok/uk/text-operations.kbd
   /usr/share/gok/uk/valuator.kbd
-  /usr/share/gok/valuator.kbd
   /usr/share/gok/value-fast-less.png
   /usr/share/gok/value-fast-more.png
   /usr/share/gok/value-less.png
@@ -897,6 +926,7 @@ Files included in the binary package:
   /usr/share/locale/am/LC_MESSAGES/gok.mo
   /usr/share/locale/ang/LC_MESSAGES/gok.mo
   /usr/share/locale/ar/LC_MESSAGES/gok.mo
+  /usr/share/locale/as/LC_MESSAGES/gok.mo
   /usr/share/locale/az/LC_MESSAGES/gok.mo
   /usr/share/locale/be/LC_MESSAGES/gok.mo
   /usr/share/locale/bg/LC_MESSAGES/gok.mo
@@ -920,6 +950,7 @@ Files included in the binary package:
   /usr/share/locale/ga/LC_MESSAGES/gok.mo
   /usr/share/locale/gl/LC_MESSAGES/gok.mo
   /usr/share/locale/gu/LC_MESSAGES/gok.mo
+  /usr/share/locale/he/LC_MESSAGES/gok.mo
   /usr/share/locale/hi/LC_MESSAGES/gok.mo
   /usr/share/locale/hr/LC_MESSAGES/gok.mo
   /usr/share/locale/hu/LC_MESSAGES/gok.mo
@@ -939,6 +970,7 @@ Files included in the binary package:
   /usr/share/locale/nb/LC_MESSAGES/gok.mo
   /usr/share/locale/ne/LC_MESSAGES/gok.mo
   /usr/share/locale/nl/LC_MESSAGES/gok.mo
+  /usr/share/locale/nn/LC_MESSAGES/gok.mo
   /usr/share/locale/oc/LC_MESSAGES/gok.mo
   /usr/share/locale/or/LC_MESSAGES/gok.mo
   /usr/share/locale/pa/LC_MESSAGES/gok.mo
@@ -970,6 +1002,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 1.4.0-1 -----
+Version bump.
 
 ----- version 1.3.7-1 -----
 Version bump for GNOME 2.20.
