--- a/README
+++ b/README
@@ -12,42 +12,43 @@ methods are also specified in XML providing the ability to modify
 existing access methods and create new ones.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  libatk1.0_0-1.24.0-1
+  cygwin-1.7.0-45
+  libatk1.0_0-1.26.0-1
   libbonobo2_0-2.24.0-1
   libesd0-0.2.41-1
-  libgconf2_4-2.24.0-1
-  libgdk_pixbuf2.0_0-2.14.5-1
-  libglade2.0_0-2.6.3-2
-  libglib2.0_0-2.18.3-1
-  libgnome2_0-2.24.1-1
-  libgnomespeech7-0.4.22-1
-  libgnomeui2_0-2.24.0-1
-  libgtk2.0_0-2.14.5-1
-  libintl8-0.17-2
-  libORBit2_0-2.14.16-1
-  libpango1.0_0-1.22.3-1
-  libspi0-1.24.0-1
-  libwnck1_22-2.24.2-1
-  libX11_6-1.1.5-1
-  libXi6-1.1.4-1
-  libxml2-2.7.2-1
+  libgcc1-4.3.2-2
+  libgconf2_4-2.26.0-1
+  libgdk_pixbuf2.0_0-2.16.1-1
+  libglade2.0_0-2.6.4-1
+  libglib2.0_0-2.20.1-1
+  libgnome2_0-2.26.0-1
+  libgnomespeech7-0.4.25-1
+  libgnomeui2_0-2.24.1-1
+  libgtk2.0_0-2.16.1-1
+  libintl8-0.17-10
+  libORBit2_0-2.14.17-1
+  libpango1.0_0-1.24.1-1
+  libspi0-1.26.0-1
+  libwnck1_22-2.26.0-1
+  libX11_6-1.2-10
+  libXi6-1.2.1-10
+  libxml2-2.7.3-10
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.63-1
-  automake1.10-1.10.1-2
+  autoconf2.5-2.63-10
+  automake1.10-1.10.1-10
   binutils-20080624-2
-  cygport-0.4.3-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  gnome-common-2.24.0-1
-  gtk-doc-1.11-1
-  intltool-0.40.5-1
-  libtool-2.2.6a-1
-  make-3.81-1
-  pkg-config-0.23a-2
-  rarian-0.8.1-1
+  cygport-0.9.6-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  gnome-common-2.26.0-1
+  gtk-doc-1.11-2
+  intltool-0.40.6-1
+  libtool-2.2.7a-12
+  make-3.81-2
+  pkg-config-0.23b-10
+  rarian-0.8.1-10
   sed-4.1.5-2
 
 Canonical website:
@@ -59,15 +60,15 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gok-2.24.0-X-src.tar.bz2
+  unpack gok-2.26.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gok-2.24.0-X.cygport all
+  cygport ./gok-2.26.0-X.cygport all
 
 This will create:
-  /usr/src/gok-2.24.0-X-src.tar.bz2
-  /usr/src/gok-2.24.0-X.tar.bz2
+  /usr/src/gok-2.26.0-X-src.tar.bz2
+  /usr/src/gok-2.26.0-X.tar.bz2
 
 -------------------------------------------
 
@@ -81,12 +82,11 @@ Files included in the binary package:
   /usr/lib/bonobo/servers/GNOME_Gok.server
   /usr/lib/pkgconfig/gok-1.0.pc
   /usr/share/applications/gok.desktop
-  /usr/share/doc/gok-2.24.0/AUTHORS
-  /usr/share/doc/gok-2.24.0/COPYING
-  /usr/share/doc/gok-2.24.0/ChangeLog
-  /usr/share/doc/gok-2.24.0/INSTALL
-  /usr/share/doc/gok-2.24.0/NEWS
-  /usr/share/doc/gok-2.24.0/README
+  /usr/share/doc/gok/AUTHORS
+  /usr/share/doc/gok/COPYING
+  /usr/share/doc/gok/ChangeLog
+  /usr/share/doc/gok/NEWS
+  /usr/share/doc/gok/README
   /usr/share/gnome/help/gok/C/gok.xml
   /usr/share/gnome/help/gok/C/legal.xml
   /usr/share/gok/C/gok-controls.kbd
@@ -522,6 +522,16 @@ Files included in the binary package:
   /usr/share/gok/lv/quit.kbd
   /usr/share/gok/lv/text-operations.kbd
   /usr/share/gok/lv/valuator.kbd
+  /usr/share/gok/mai/gok-controls.kbd
+  /usr/share/gok/mai/hide.kbd
+  /usr/share/gok/mai/launcher.kbd
+  /usr/share/gok/mai/main.kbd
+  /usr/share/gok/mai/mouse.kbd
+  /usr/share/gok/mai/move-resize.kbd
+  /usr/share/gok/mai/numberpad.kbd
+  /usr/share/gok/mai/quit.kbd
+  /usr/share/gok/mai/text-operations.kbd
+  /usr/share/gok/mai/valuator.kbd
   /usr/share/gok/manage.kbd
   /usr/share/gok/mk/gok-controls.kbd
   /usr/share/gok/mk/hide.kbd
@@ -972,6 +982,7 @@ Files included in the binary package:
   /usr/share/locale/ku/LC_MESSAGES/gok.mo
   /usr/share/locale/lt/LC_MESSAGES/gok.mo
   /usr/share/locale/lv/LC_MESSAGES/gok.mo
+  /usr/share/locale/mai/LC_MESSAGES/gok.mo
   /usr/share/locale/mk/LC_MESSAGES/gok.mo
   /usr/share/locale/ml/LC_MESSAGES/gok.mo
   /usr/share/locale/mn/LC_MESSAGES/gok.mo
@@ -1013,29 +1024,8 @@ Files included in the binary package:
 
 Port Notes:
 
------ version 2.24.0-1 -----
-Version bump for GNOME 2.24.
-
------ version 1.4.0-1 -----
-Version bump.
-
------ version 1.3.7-1 -----
-Version bump for GNOME 2.20.
-
------ version 1.2.5-1 -----
-Version bump for GNOME 2.18.
-
------ version 1.0.10-1 -----
-Version bump.
-
------ version 1.0.8-1 -----
-Version bump.
-
------ version 1.0.6-1 -----
-Version bump.
-
------ version 1.0.5-1 -----
-Initial release for Cygwin.
+----- version 2.26.0-1 -----
+Initial release of GNOME 2.26 for Cygwin 1.7.
 
 
 Cygwin port maintained by:
